adding full support of user agents: safari,ie8,gecko1_8